@@ -1,3 +1,6 @@
-There are news feeds available for this project
+There are news feeds available for this project's releases:
 http://sourceforge.net/export/rss2_projfiles.php?group_id=236429
 http://freshmeat.net/projects/vmpk/releases.atom
+
+Detailed development activities: 
+http://sourceforge.net/export/rss2_keepsake.php?group_id=236429
